2004-12-11  jrandom     * Use a simpler and less memory intensive job for processing outbound       client messages when the session is in mode=bestEffort.  We can       immediately discard the data as soon as its sent the first time,       rather than wait for an ack, since we will never internally resend.     * Reduce some synchronization to avoid a rare deadlock     * Replaced 'localhost' with 127.0.0.1 in the i2ptunnel config, and special       case it within the tunnel controller.     * Script cleanup for building jbigi/jcpuid     * Logging
Monotone-Parent: a099e4fe056dd3976ab2b4f96b7049250e8ebb1c
Monotone-Revision: 19eec68678dd1d1798c68e769d4248cf2f95b546

Monotone-Author: jrandom
Monotone-Date: 2004-12-11T07:05:12
Monotone-Branch: i2p.i2p

--- a/installer/resources/i2ptunnel.config
+++ b/installer/resources/i2ptunnel.config
@@ -5,7 +5,7 @@ tunnel.0.type=httpclient
 tunnel.0.interface=127.0.0.1
 tunnel.0.listenPort=4444
 tunnel.0.proxyList=squid.i2p,www1.squid.i2p
-tunnel.0.i2cpHost=localhost
+tunnel.0.i2cpHost=127.0.0.1
 tunnel.0.i2cpPort=7654
 tunnel.0.option.tunnels.depthInbound=2
 tunnel.0.option.tunnels.numInbound=2
@@ -19,7 +19,7 @@ tunnel.1.type=client
 tunnel.1.interface=127.0.0.1
 tunnel.1.listenPort=6668
 tunnel.1.targetDestination=irc.duck.i2p,irc.baffled.i2p
-tunnel.1.i2cpHost=localhost
+tunnel.1.i2cpHost=127.0.0.1
 tunnel.1.i2cpPort=7654
 tunnel.1.option.tunnels.depthInbound=2
 tunnel.1.option.tunnels.numInbound=2
@@ -33,7 +33,7 @@ tunnel.2.type=client
 tunnel.2.interface=127.0.0.1
 tunnel.2.listenPort=2401
 tunnel.2.targetDestination=cvs.i2p
-tunnel.2.i2cpHost=localhost
+tunnel.2.i2cpHost=127.0.0.1
 tunnel.2.i2cpPort=7654
 tunnel.2.option.tunnels.depthInbound=2
 tunnel.2.option.tunnels.numInbound=2
@@ -43,10 +43,10 @@ tunnel.2.startOnLoad=false
 tunnel.3.name=eepsite
 tunnel.3.description=My eepsite
 tunnel.3.type=server
-tunnel.3.targetHost=localhost
+tunnel.3.targetHost=127.0.0.1
 tunnel.3.targetPort=7658
 tunnel.3.privKeyFile=eepsite/eepPriv.dat
-tunnel.3.i2cpHost=localhost
+tunnel.3.i2cpHost=127.0.0.1
 tunnel.3.i2cpPort=7654
 tunnel.3.option.tunnels.depthInbound=2
 tunnel.3.option.tunnels.numInbound=2
@@ -54,7 +54,7 @@ tunnel.3.startOnLoad=true
 
 # postman's SMTP server - see www.postman.i2p
 tunnel.4.description=smtp server
-tunnel.4.i2cpHost=localhost
+tunnel.4.i2cpHost=127.0.0.1
 tunnel.4.i2cpPort=7654
 tunnel.4.interface=127.0.0.1
 tunnel.4.listenPort=7659
@@ -69,7 +69,7 @@ tunnel.4.type=client
 # postman's POP3 server - see www.postman.i2p
 tunnel.5.name=pop3.postman.i2p
 tunnel.5.description=pop3 server
-tunnel.5.i2cpHost=localhost
+tunnel.5.i2cpHost=127.0.0.1
 tunnel.5.i2cpPort=7654
 tunnel.5.interface=127.0.0.1
 tunnel.5.listenPort=7660
