2004-12-19  jrandom     * Added a new i2ptunnel type: 'httpserver', allowing you to specify what       hostname should be sent to the webserver.  By default, new installs will       have an httpserver pointing at their jetty instance with the spoofed       name 'mysite.i2p' (editable on the /i2ptunnel/edit.jsp page).
Monotone-Parent: 00c9c75c0664a49f90c2386913d48a5bf46de024
Monotone-Revision: fb89ad4a4df43b6d6ef6283f33ee492fd077727e

Monotone-Author: jrandom
Monotone-Date: 2004-12-19T11:04:56
Monotone-Branch: i2p.i2p

--- a/installer/resources/i2ptunnel.config
+++ b/installer/resources/i2ptunnel.config
@@ -42,9 +42,10 @@ tunnel.2.startOnLoad=false
 # local eepserver
 tunnel.3.name=eepsite
 tunnel.3.description=My eepsite
-tunnel.3.type=server
+tunnel.3.type=httpserver
 tunnel.3.targetHost=127.0.0.1
 tunnel.3.targetPort=7658
+tunnel.3.spoofedHost=mysite.i2p
 tunnel.3.privKeyFile=eepsite/eepPriv.dat
 tunnel.3.i2cpHost=127.0.0.1
 tunnel.3.i2cpPort=7654
