2004-12-29  jrandom     * Imported Ragnarok's addressbook source (2.0.2) which is built but not       deployed in the i2pinstall.jar/i2pupdate.zip (yet).     * Don't treat connection inactivity closure as a connection error.
Monotone-Parent: b57817bc778412937c5ed9a26452953c22db8fd4
Monotone-Revision: 2a2b89ff396f979f2c698340f9661f919ad14d95

Monotone-Author: jrandom
Monotone-Date: 2004-12-29T22:16:42
Monotone-Branch: i2p.i2p

--- a/build.xml
+++ b/build.xml
@@ -26,6 +26,7 @@
         <ant dir="apps/netmonitor/java/" target="jar" />
         <ant dir="apps/systray/java/" target="jar" />
         <ant dir="apps/routerconsole/java/" target="jar" />
+        <ant dir="apps/addressbook/" target="war" />
     </target>
     <target name="buildWEB">
         <ant dir="apps/jetty" target="fetchJettylib" />
@@ -55,6 +56,7 @@
         <copy file="apps/netmonitor/java/build/netmonitor.jar" todir="build/" />
         <copy file="apps/systray/java/build/systray.jar" todir="build/" />
         <copy file="installer/lib/jbigi/jbigi.jar" todir="build" />
+        <copy file="apps/addressbook/dist/addressbook.war" todir="build/" />
     </target>
     <target name="javadoc">
         <mkdir dir="./build" />
@@ -102,6 +104,7 @@
         <ant dir="apps/heartbeat/java/" target="distclean" />
         <ant dir="apps/netmonitor/java/" target="distclean" />
         <ant dir="apps/routerconsole/java/" target="distclean" />
+        <ant dir="apps/addressbook/" target="distclean" />
         <ant dir="apps/systray/java/" target="distclean" />
         <ant dir="installer/java/" target="distclean" />
         <delete>
@@ -178,6 +181,15 @@
         <copy file="build/xml-apis.jar" todir="pkg-temp/lib/" />
         <copy file="build/i2ptunnel.war" todir="pkg-temp/webapps/" />
         <copy file="build/routerconsole.war" todir="pkg-temp/webapps/" />
+
+	<!--
+        <mkdir dir="pkg-temp/addressbook" />
+        <copy file="apps/addressbook/config.txt" todir="pkg-temp/addressbook/" />
+        <copy file="apps/addressbook/myhosts.txt" todir="pkg-temp/addressbook/" />
+        <copy file="apps/addressbook/subscriptions.txt" todir="pkg-temp/addressbook/" />
+        <copy file="build/addressbook.war" todir="pkg-temp/webapps/" />
+	-->
+
         <copy file="installer/resources/clients.config" todir="pkg-temp/" />
         <copy file="installer/resources/i2prouter" todir="pkg-temp/" />
         <copy file="installer/resources/i2prouter.bat" todir="pkg-temp/" />
@@ -239,6 +251,12 @@
         <copy file="build/routerconsole.jar" todir="pkg-temp/lib/" />
         <copy file="build/i2ptunnel.war" todir="pkg-temp/webapps/" />
         <copy file="build/routerconsole.war" todir="pkg-temp/webapps/" />
+        
+	<!-- 
+	<mkdir dir="pkg-temp/addressbook" />
+        <copy file="build/addressbook.war" todir="pkg-temp/webapps/" />
+	-->
+
         <copy file="history.txt" todir="pkg-temp/" />
         <copy file="hosts.txt" todir="pkg-temp/" />
         <mkdir dir="pkg-temp/eepsite" />
