2005-01-26  smeghead     * Added a couple of scripts, i2ptest.sh and i2pbench.sh, to manage the core       tests and benchmarks.     * Routerconsole now builds under gcj 3.4.3.     * Corrected divide by zero error in TunnelId class under gcj (jrandom++).
Monotone-Parent: 0d9a2114324a2c786168b1323a9573dc6c2d2768
Monotone-Revision: c0d5896cfde51e48f349526c76fa8e396bb43c02

Monotone-Author: smeghead
Monotone-Date: 2005-01-27T00:21:10
Monotone-Branch: i2p.i2p

--- a/apps/routerconsole/java/build.xml
+++ b/apps/routerconsole/java/build.xml
@@ -48,7 +48,7 @@
         <mkdir dir="../jsp/WEB-INF/" />
         <mkdir dir="../jsp/WEB-INF/classes" />
         <!-- there are various jspc ant tasks, but they all seem a bit flakey -->
-        <java classname="org.apache.jasper.JspC" fork="true" >
+        <java classname="org.apache.jasper.JspC" fork="true">
             <classpath>
                 <pathelement location="../../jetty/jettylib/jasper-compiler.jar" />
                 <pathelement location="../../jetty/jettylib/jasper-runtime.jar" />
@@ -57,6 +57,8 @@
                 <pathelement location="../../systray/java/build/obj" />
                 <pathelement location="../../systray/java/lib/systray4j.jar" /> <!-- some javacs resolve recursively... -->
                 <pathelement location="../../../installer/lib/wrapper/win32/wrapper.jar" /> <!-- we dont care if we're not on win32 -->
+                <pathelement location="../../../core/java/build/i2p.jar" />
+                <pathelement location="../../../router/java/build/router.jar" />
                 <pathelement location="build/routerconsole.jar" />
             </classpath>
             <arg value="-d" />
