2005-02-17  jrandom     * Fixed the braindead tunnel testing logic     * If a large number of tunnels are failing (within the last 5-10 minutes)       and the current tunnel pool's configuration allows it, randomly build a       zero hop tunnel to replace failed tunnels.     * Enable postman's POP3 and SMTP tunnels by default
Monotone-Parent: adcb80c686235ba45d3046060f2259bba243edf4
Monotone-Revision: 053fc2b507024928f5cf88f7c7ed083637adb752

Monotone-Author: jrandom
Monotone-Date: 2005-02-17T17:59:27
Monotone-Branch: i2p.i2p

--- a/installer/resources/i2ptunnel.config
+++ b/installer/resources/i2ptunnel.config
@@ -64,7 +64,7 @@ tunnel.4.name=smtp.postman.i2p
 tunnel.4.option.tunnels.depthInbound=2
 tunnel.4.option.tunnels.numInbound=2
 tunnel.4.option.i2p.streaming.connectDelay=1000
-tunnel.4.startOnLoad=false
+tunnel.4.startOnLoad=true
 tunnel.4.targetDestination=smtp.postman.i2p
 tunnel.4.type=client
 
@@ -78,6 +78,6 @@ tunnel.5.listenPort=7660
 tunnel.5.option.tunnels.depthInbound=2
 tunnel.5.option.tunnels.numInbound=2
 tunnel.5.option.i2p.streaming.connectDelay=1000
-tunnel.5.startOnLoad=false
+tunnel.5.startOnLoad=true
 tunnel.5.targetDestination=pop.postman.i2p
 tunnel.5.type=client
