--- a/installer/resources/i2ptunnel.config
+++ b/installer/resources/i2ptunnel.config
@@ -4,7 +4,7 @@ tunnel.0.description=HTTP proxy for browsing eepsites and the web
 tunnel.0.type=httpclient
 tunnel.0.interface=127.0.0.1
 tunnel.0.listenPort=4444
-tunnel.0.proxyList=squid.i2p
+tunnel.0.proxyList=squid.i2p,www1.squid.i2p
 tunnel.0.i2cpHost=127.0.0.1
 tunnel.0.i2cpPort=7654
 tunnel.0.option.tunnels.depthInbound=2
