* actually reseed properly * hide the susimail deprecation warnings * dont push hosts.txt in the update (people can subscribe if they want to)
Monotone-Parent: 8ec88d4050f564c443c71e9743950242ca948708
Monotone-Revision: 9a6a5dd1adfabff1a69a79bfaf37c191c50bc52c

Monotone-Author: jrandom
Monotone-Date: 2005-02-18T08:12:40
Monotone-Branch: i2p.i2p

--- a/build.xml
+++ b/build.xml
@@ -265,7 +265,8 @@
         <copy file="build/addressbook.war" todir="pkg-temp/webapps/" />
         <copy file="build/susimail.war" todir="pkg-temp/webapps/" />
         <copy file="history.txt" todir="pkg-temp/" />
-        <copy file="hosts.txt" todir="pkg-temp/" />
+        <!-- the addressbook handles this for updates -->
+        <!-- <copy file="hosts.txt" todir="pkg-temp/" /> -->
         <mkdir dir="pkg-temp/eepsite" />
         <mkdir dir="pkg-temp/eepsite/webapps" />
         <mkdir dir="pkg-temp/eepsite/cgi-bin" />
