--- a/installer/resources/i2ptunnel.config
+++ b/installer/resources/i2ptunnel.config
@@ -7,8 +7,8 @@ tunnel.0.listenPort=4444
 tunnel.0.proxyList=squid.i2p,www1.squid.i2p
 tunnel.0.i2cpHost=127.0.0.1
 tunnel.0.i2cpPort=7654
-tunnel.0.option.tunnels.depthInbound=2
-tunnel.0.option.tunnels.numInbound=2
+tunnel.0.option.inbound.nickname=eepProxy
+tunnel.0.option.outbound.nickname=eepProxy
 tunnel.0.option.i2p.streaming.connectDelay=1000
 tunnel.0.startOnLoad=true
 
@@ -21,8 +21,8 @@ tunnel.1.listenPort=6668
 tunnel.1.targetDestination=irc.duck.i2p,irc.baffled.i2p
 tunnel.1.i2cpHost=127.0.0.1
 tunnel.1.i2cpPort=7654
-tunnel.1.option.tunnels.depthInbound=2
-tunnel.1.option.tunnels.numInbound=2
+tunnel.1.option.inbound.nickname=ircProxy
+tunnel.1.option.outbound.nickname=ircProxy
 tunnel.1.option.i2p.streaming.connectDelay=1000
 tunnel.1.option.i2p.maxWindowSize=1
 tunnel.1.startOnLoad=true
@@ -36,8 +36,8 @@ tunnel.2.listenPort=2401
 tunnel.2.targetDestination=cvs.i2p
 tunnel.2.i2cpHost=127.0.0.1
 tunnel.2.i2cpPort=7654
-tunnel.2.option.tunnels.depthInbound=2
-tunnel.2.option.tunnels.numInbound=2
+tunnel.2.option.inbound.nickname=cvsProxy
+tunnel.2.option.outbound.nickname=cvsProxy
 tunnel.2.startOnLoad=false
 
 # local eepserver
@@ -50,8 +50,8 @@ tunnel.3.spoofedHost=mysite.i2p
 tunnel.3.privKeyFile=eepsite/eepPriv.dat
 tunnel.3.i2cpHost=127.0.0.1
 tunnel.3.i2cpPort=7654
-tunnel.3.option.tunnels.depthInbound=2
-tunnel.3.option.tunnels.numInbound=2
+tunnel.3.option.inbound.nickname=eepsite
+tunnel.3.option.outbound.nickname=eepsite
 tunnel.3.startOnLoad=true
 
 # postman's SMTP server - see www.postman.i2p
@@ -61,8 +61,8 @@ tunnel.4.i2cpPort=7654
 tunnel.4.interface=127.0.0.1
 tunnel.4.listenPort=7659
 tunnel.4.name=smtp.postman.i2p
-tunnel.4.option.tunnels.depthInbound=2
-tunnel.4.option.tunnels.numInbound=2
+tunnel.4.option.inbound.nickname=smtp
+tunnel.4.option.outbound.nickname=smtp
 tunnel.4.option.i2p.streaming.connectDelay=1000
 tunnel.4.startOnLoad=true
 tunnel.4.targetDestination=smtp.postman.i2p
@@ -75,8 +75,8 @@ tunnel.5.i2cpHost=127.0.0.1
 tunnel.5.i2cpPort=7654
 tunnel.5.interface=127.0.0.1
 tunnel.5.listenPort=7660
-tunnel.5.option.tunnels.depthInbound=2
-tunnel.5.option.tunnels.numInbound=2
+tunnel.5.option.inbound.nickname=pop3
+tunnel.5.option.outbound.nickname=pop3
 tunnel.5.option.i2p.streaming.connectDelay=1000
 tunnel.5.startOnLoad=true
 tunnel.5.targetDestination=pop.postman.i2p
