clear the old precompiled .java files (thanks duck!)
Monotone-Parent: 8783c20d8e6e4396acd87d0af747526ee4adc45b
Monotone-Revision: 57d2ec3bfbf27c49d2bb562f6b2343d850ce6559

Monotone-Author: jrandom
Monotone-Date: 2005-02-18T16:56:46
Monotone-Branch: i2p.i2p

--- a/apps/i2ptunnel/java/build.xml
+++ b/apps/i2ptunnel/java/build.xml
@@ -31,6 +31,9 @@
         </war>
     </target>
     <target name="precompilejsp">
+        <delete dir="../jsp/WEB-INF/" />
+        <delete file="../jsp/web-fragment.xml" />
+        <delete file="../jsp/web-out.xml" />
         <mkdir dir="../jsp/WEB-INF/" />
         <mkdir dir="../jsp/WEB-INF/classes" />
         <!-- there are various jspc ant tasks, but they all seem a bit flakey -->
