--- a/apps/addressbook/build.xml
+++ b/apps/addressbook/build.xml
@@ -21,7 +21,8 @@
 	<target name="distclean" depends="clean" />
 
 	<target name="compile" depends="init">
-		<javac srcdir="${src}" destdir="${build}" classpath="${servlet}"/>
+		<javac debug="true" deprecation="on" source="1.3" target="1.3" 
+                       srcdir="${src}" destdir="${build}" classpath="${servlet}"/>
 	</target>
 
 	<target name="jar" depends="compile">
