--- a/installer/resources/i2ptunnel.config
+++ b/installer/resources/i2ptunnel.config
@@ -18,7 +18,7 @@ tunnel.1.description=IRC proxy to access the anonymous irc net
 tunnel.1.type=client
 tunnel.1.interface=127.0.0.1
 tunnel.1.listenPort=6668
-tunnel.1.targetDestination=irc.duck.i2p,irc.baffled.i2p
+tunnel.1.targetDestination=irc.duck.i2p,irc.baffled.i2p,irc.postman.i2p
 tunnel.1.i2cpHost=127.0.0.1
 tunnel.1.i2cpPort=7654
 tunnel.1.option.inbound.nickname=ircProxy
