--- a/build.xml
+++ b/build.xml
@@ -222,7 +222,7 @@
         <copy file="core/perl/i2ptest.sh" todir="pkg-temp/scripts/" />
         <mkdir dir="pkg-temp/docs" />
         <copy file="readme.html" todir="pkg-temp/docs/" />
-        <copy file="initialNews.xml" todir="pkg-temp/docs/" />
+        <copy file="initialNews.xml" tofile="pkg-temp/docs/news.xml" />
         <copy file="installer/resources/startconsole.html" todir="pkg-temp/docs/" />
         <copy file="installer/resources/start.ico" todir="pkg-temp/docs/" />
         <copy file="installer/resources/console.ico" todir="pkg-temp/docs/" />
