oops, forgot to add new eepget script to build
Monotone-Parent: 8f51a83e51bcd2de16352c3f12b8dc772e4b733a
Monotone-Revision: 53a99ff99c69367cfb4689546147e35c53db2661

Monotone-Author: smeghead
Monotone-Date: 2005-04-08T01:56:02
Monotone-Branch: i2p.i2p

--- a/build.xml
+++ b/build.xml
@@ -185,6 +185,7 @@
         <copy file="build/addressbook.war" todir="pkg-temp/webapps/" />
         <copy file="build/susimail.war" todir="pkg-temp/webapps/" />
         <copy file="installer/resources/clients.config" todir="pkg-temp/" />
+        <copy file="installer/resources/eepget" todir="pkg-temp/" />
         <copy file="installer/resources/i2prouter" todir="pkg-temp/" />
         <copy file="installer/resources/i2prouter.bat" todir="pkg-temp/" />
         <copy file="installer/resources/i2ptunnel.config" todir="pkg-temp/" />
