--- a/build.xml
+++ b/build.xml
@@ -228,6 +228,9 @@
         <copy file="installer/resources/start.ico" todir="pkg-temp/docs/" />
         <copy file="installer/resources/console.ico" todir="pkg-temp/docs/" />
         <copy file="installer/resources/uninstall.ico" todir="pkg-temp/docs/" />
+        <copy file="installer/resources/dnf-header.ht" todir="pkg-temp/docs/" />
+        <copy file="installer/resources/dnfp-header.ht" todir="pkg-temp/docs/" />
+        <copy file="installer/resources/dnfb-header.ht" todir="pkg-temp/docs/" />
         <mkdir dir="pkg-temp/eepsite" />
         <mkdir dir="pkg-temp/eepsite/webapps" />
         <mkdir dir="pkg-temp/eepsite/logs" />
@@ -274,6 +277,9 @@
         <copy file="history.txt" todir="pkg-temp/" />
         <mkdir dir="pkg-temp/docs/" />
         <copy file="news.xml" todir="pkg-temp/docs/" />
+        <copy file="installer/resources/dnf-header.ht" todir="pkg-temp/docs/" />
+        <copy file="installer/resources/dnfp-header.ht" todir="pkg-temp/docs/" />
+        <copy file="installer/resources/dnfb-header.ht" todir="pkg-temp/docs/" />
         <!-- the addressbook handles this for updates -->
         <!-- <copy file="hosts.txt" todir="pkg-temp/" /> -->
         <mkdir dir="pkg-temp/eepsite" />
