--- a/installer/resources/i2ptunnel.config
+++ b/installer/resources/i2ptunnel.config
@@ -2,13 +2,14 @@
 tunnel.0.name=eepProxy
 tunnel.0.description=HTTP proxy for browsing eepsites and the web
 tunnel.0.type=httpclient
+tunnel.0.sharedClient=true
 tunnel.0.interface=127.0.0.1
 tunnel.0.listenPort=4444
 tunnel.0.proxyList=squid.i2p,www1.squid.i2p
 tunnel.0.i2cpHost=127.0.0.1
 tunnel.0.i2cpPort=7654
-tunnel.0.option.inbound.nickname=eepProxy
-tunnel.0.option.outbound.nickname=eepProxy
+tunnel.0.option.inbound.nickname=shared clients
+tunnel.0.option.outbound.nickname=shared clients
 tunnel.0.option.i2p.streaming.connectDelay=1000
 tunnel.0.startOnLoad=true
 
@@ -16,13 +17,14 @@ tunnel.0.startOnLoad=true
 tunnel.1.name=ircProxy
 tunnel.1.description=IRC proxy to access the anonymous irc net
 tunnel.1.type=client
+tunnel.1.sharedClient=true
 tunnel.1.interface=127.0.0.1
 tunnel.1.listenPort=6668
 tunnel.1.targetDestination=irc.duck.i2p,irc.baffled.i2p,irc.postman.i2p
 tunnel.1.i2cpHost=127.0.0.1
 tunnel.1.i2cpPort=7654
-tunnel.1.option.inbound.nickname=ircProxy
-tunnel.1.option.outbound.nickname=ircProxy
+tunnel.1.option.inbound.nickname=shared clients
+tunnel.1.option.outbound.nickname=shared clients
 tunnel.1.option.i2p.streaming.connectDelay=1000
 tunnel.1.option.i2p.maxWindowSize=1
 tunnel.1.startOnLoad=true
@@ -31,13 +33,14 @@ tunnel.1.startOnLoad=true
 tunnel.2.name=cvs.i2p
 tunnel.2.description=I2P CVS pserver
 tunnel.2.type=client
+tunnel.2.sharedClient=true
 tunnel.2.interface=127.0.0.1
 tunnel.2.listenPort=2401
 tunnel.2.targetDestination=cvs.i2p
 tunnel.2.i2cpHost=127.0.0.1
 tunnel.2.i2cpPort=7654
-tunnel.2.option.inbound.nickname=cvsProxy
-tunnel.2.option.outbound.nickname=cvsProxy
+tunnel.2.option.inbound.nickname=shared clients
+tunnel.2.option.outbound.nickname=shared clients
 tunnel.2.startOnLoad=false
 
 # local eepserver
@@ -61,12 +64,13 @@ tunnel.4.i2cpPort=7654
 tunnel.4.interface=127.0.0.1
 tunnel.4.listenPort=7659
 tunnel.4.name=smtp.postman.i2p
-tunnel.4.option.inbound.nickname=smtp
-tunnel.4.option.outbound.nickname=smtp
+tunnel.4.option.inbound.nickname=shared clients
+tunnel.4.option.outbound.nickname=shared clients
 tunnel.4.option.i2p.streaming.connectDelay=1000
 tunnel.4.startOnLoad=true
 tunnel.4.targetDestination=smtp.postman.i2p
 tunnel.4.type=client
+tunnel.4.sharedClient=true
 
 # postman's POP3 server - see www.postman.i2p
 tunnel.5.name=pop3.postman.i2p
@@ -75,8 +79,8 @@ tunnel.5.i2cpHost=127.0.0.1
 tunnel.5.i2cpPort=7654
 tunnel.5.interface=127.0.0.1
 tunnel.5.listenPort=7660
-tunnel.5.option.inbound.nickname=pop3
-tunnel.5.option.outbound.nickname=pop3
+tunnel.5.option.inbound.nickname=shared clients
+tunnel.5.option.outbound.nickname=shared clients
 tunnel.5.option.i2p.streaming.connectDelay=1000
 tunnel.5.startOnLoad=true
 tunnel.5.targetDestination=pop.postman.i2p
