* build with reference to the i2p.jar/mstreaming.jar/i2ptunnel.jar inline (building as necessary) * removed unnecessary references to i2ptunnel (though i2ptunnelxmlobject still references i2ptunnelxmlwrapper)
Monotone-Parent: a8011c36237eec0352704e6958ba51d0fad8b59e
Monotone-Revision: 7c88a225cc556ccd15ef40d36c6d092a0c11721f

Monotone-Author: jrandom
Monotone-Date: 2005-04-18T18:47:22
Monotone-Branch: i2p.i2p

--- a/apps/q/java/build.xml
+++ b/apps/q/java/build.xml
@@ -19,10 +19,19 @@
     <property location="${project.name}.jar" name="jar"/>
   </target>
 
-  <target depends="init" name="compile">
+  <target name="builddep">
+    <ant dir="../../i2ptunnel/java/" target="build" />
+    <!-- i2ptunnel builds ministreaming and core -->
+  </target>
+  
+  <target depends="init,builddep" name="compile">
     <!-- Both srcdir and destdir should be package roots. -->
     <mkdir dir="${classes.dir}"/>
-    <javac debug="true" deprecation="true" destdir="${classes.dir}" srcdir="${src.dir}">
+    <javac debug="true" 
+           deprecation="true" 
+           destdir="${classes.dir}" 
+           srcdir="${src.dir}"
+           classpath="xmlrpc.jar:../../../core/java/build/i2p.jar:../../ministreaming/java/build/mstreaming.jar:../../i2ptunnel/java/build/i2ptunnel.jar" >
       <!-- To add something to the classpath: -->
       <!-- <classpath><pathelement location="${mylib}"/></classpath> -->
       <!-- To exclude some files: -->
