--- a/apps/q/java/build.xml
+++ b/apps/q/java/build.xml
@@ -17,7 +17,7 @@
     <property location="doc/q/api" name="javadoc.dir"/>
     <property name="project.name" value="${ant.project.name}"/>
     <property location="${project.name}.jar" name="jar"/>
-    <property location="${project.name}.war" name="war"/>
+    <property location="q.war" name="war"/>
   </target>
 
   <target name="builddep">
@@ -59,9 +59,9 @@
         <!-- To make a standalone app, insert into <jar>: -->
         <!-- <manifest><attribute name="Main-Class" value="com.foo.Main"/></manifest> -->
         <war compress="true" jarfile="${war}" webxml="web.xml">
-          <!-- <fileset dir="${classes.dir}" includes="**/QConsole.class"/> -->
-          <classes file="build/net/i2p/aum/q/QConsole.class"/>
-          <classes file="build/HTML/**"/>
+          <!-- <fileset file="build/net/i2p/aum/q/QConsole.class"/> -->
+          <classes dir="build" includes="**/QConsole.class"/>
+          <classes dir="build" includes="**/HTML/**"/>
           <!-- <fileset includes="**/HTML/*.class"/> -->
           <lib file="xmlrpc.jar"/>
         </war>
