I removed those dumb platform specific makefiles.  They weren't doing what they ought anyway.  If there are platform specific issues, someone please tell me and I'll provide support for it here.  Or patch it yourself. And this is the big "Fix the Parser" patch.  It turns the sam_parse function in src/parse.c into something that actually works.  Generating the argument list from an incoming SAM thingy is a bit memory churn-y; perhaps when I have time I'll replace all those strdups with structures that simply track the (start,end) indices. Oh and also I moved i2p-ping to the new system.  Which required 0 change in code.  All I did was fix the Makefile, and add shared library libtool support.  Anyway, so enjoy folks.  It's rare I'm this productive - polecat
Monotone-Parent: 0319110ed3ad57584c8d48cb0a1eeaf1b158e0a2
Monotone-Revision: 2e1b0a840c42e8eba8bf7ee32d322fb5f4649e99

Monotone-Author: polecat
Monotone-Date: 2005-04-23T03:28:40
Monotone-Branch: i2p.i2p

--- a/apps/sam/c/examples/i2p-ping/Makefile
+++ b/apps/sam/c/examples/i2p-ping/Makefile
@@ -1,39 +1,54 @@
-#
-# This Makefile is compatible with GNU Make and should work on POSIX systems
-#
+FLAGS+=-g
 
-#
-# Programs
-#
+CFLAGS = $(FLAGS) -pipe -std=c99 -Wall
+CFLAGS += -I../../inc
+LDFLAGS = $(FLAGS) -L../../lib -lsam
 
-CC = gcc
-INSTALL = install
-RM = rm
+OBJS:=i2p-ping.lo
+DEPS:=$(patsubst obj/%.lo, .deps/%.d, $(OBJS))
+DESTDIR:=$(if $(DESTDIR),$(DESTDIR)/lib,/usr/lib)
 
-#
-# Flags
-#
+MAKEFLAGS=-s -r
+PERL=$(shell which perl 2>/dev/null)
+ifneq ($(PERL),)
+STATUS=$(PERL) ../../status
+else
+STATUS=echo
+endif
 
-CFLAGS = -g -O2 -pipe -std=c99 -Wall
-CFLAGS += -I../../inc -L../../lib
-LIBS = -lsam
+LIBTOOL_LOG=libtool.log
 
-#
-# Build rules
-#
+all:: cleanlog i2p-ping
 
-all: clean i2p-ping
+cleanlog:
+	>$(LIBTOOL_LOG)
 
-i2p-ping: i2p-ping.c
-	$(CC) $(CFLAGS) -o i2p-ping.o -c i2p-ping.c
-	$(CC) $(CFLAGS) -o i2p-ping i2p-ping.o $(LIBS)
+i2p-ping: $(OBJS)
+	$(STATUS) link
+	libtool --mode=link gcc $(LDFLAGS) -o $@ $^ >>$(LIBTOOL_LOG)
 
-install: i2p-ping
-	$(INSTALL) i2p-ping $(HOME)/bin
-
-#
-# Cleanup rules
-#
+%.lo: %.c
+	$(STATUS) compile $*
+	libtool --mode=compile gcc $(CFLAGS) -Iinc/ -c -o $@ $< >>$(LIBTOOL_LOG)
+.deps/%.d: src/%.c
+	$(STATUS) deps $*
+	gcc -Iinc/ -MM -MT obj/$*.o $^ -o $@
 
 clean:
-	-$(RM) -f i2p-ping *.o
+	$(STATUS) clean
+	rm -Rf .deps obj libtool.log
+	libtool --mode=clean rm -f i2p-ping i2p-ping.lo >>$(LIBTOOL_LOG)
+
+$(OBJS):|obj
+obj:
+	$(STATUS) MKDIR $@
+	mkdir -p $@
+
+-include $(DEPS)
+$(DEPS):|.deps
+.deps:
+	$(STATUS) MKDIR $@
+	mkdir -p $@
+
+
+.PHONY: all cleanlog clean
