--- a/build.xml
+++ b/build.xml
@@ -89,6 +89,7 @@
                 <pathelement location="apps/jetty/jettylib/org.mortbay.jetty.jar" />
                 <pathelement location="apps/systray/java/lib/systray4j.jar" />
                 <pathelement location="installer/lib/wrapper/win32/wrapper.jar" />
+                <pathelement location="core/lib/junit.jar" />
             </classpath>
         </javadoc>
     </target>
@@ -299,5 +300,24 @@
             <manifest><attribute name="Main-Class" value="net.i2p.util.Exec" /></manifest>
         </jar>
         <izpack input="${basedir}/installer/install.xml" output="${basedir}/install.jar" installerType="standard" basedir="${basedir}" />
+    </target>
+    <target name="test">
+        <ant dir="core/java/" target="test" />
+    </target>
+    <target name="junit.report">
+        <ant dir="core/java/" target="junit.report" />
+    </target>
+    <target name="clover.report">
+        <ant dir="core/java/" target="clover.report" />
+    </target>
+    <target name="test.report" depends="junit.report, clover.report"/>
+    <target name="useclover">
+        <taskdef resource="clovertasks"/>
+        <mkdir dir="reports/core/clover" />
+        <mkdir dir="reports/core/clover" />
+        <clover-setup initString="reports/core/clover/coverage.db"/>
+    </target>
+    <target name="fulltest">
+		<ant dir="core/java/" target="fulltest" />
     </target>
 </project>
