2005-07-11  jrandom     * Reduced the growth factor on the slow start and congestion avoidance for       the streaming lib.     * Adjusted some of the I2PTunnelServer threading to use a small pool of       handlers, rather than launching off new threads which then immediately       launch off an I2PTunnelRunner instance (which launches 3 more threads..)     * Don't persist session keys / session tags (not worth it, for now)     * Added some detection and handling code for duplicate session tags being       delivered (root cause still not addressed)     * Make the PRNG's buffer size configurable (via the config property       "i2p.prng.totalBufferSizeKB=4096")     * Disable SSU flooding by default (duh)     * Updates to the StreamSink apps for better throttling tests.
Monotone-Parent: a325865997a0f504e743eb866bc3b5fb8555e791
Monotone-Revision: 146fa0599784fad2b5ae2c62a5dcdd5e96e989d3

Monotone-Author: jrandom
Monotone-Date: 2005-07-11T23:06:23
Monotone-Branch: i2p.i2p

--- a/build.xml
+++ b/build.xml
@@ -76,9 +76,9 @@
             windowtitle="I2P">
             <sourcepath>
                 <pathelement location="core/java/src" />
-                <pathelement location="core/java/test" />
+                <!--<pathelement location="core/java/test" />-->
                 <pathelement location="router/java/src" />
-                <pathelement location="router/java/test" />
+                <!--<pathelement location="router/java/test" />-->
                 <pathelement location="apps/ministreaming/java/src" />
                 <pathelement location="apps/streaming/java/src" />
                 <pathelement location="apps/i2ptunnel/java/src" />
@@ -246,7 +246,15 @@
             <tarfileset dir="pkg-temp" includes="**/*" prefix="i2p" />
         </tar>
     </target>
-    <target name="updater" depends="distclean, build">
+    <target name="updater" depends="prepupdate">
+        <zip destfile="i2pupdate.zip" basedir="pkg-temp" />
+    </target>
+    <target name="updateTest" depends="prepupdate">
+        <ant dir="core/java/" target="jarTest" />    
+        <copy file="core/java/build/i2ptest.jar" todir="pkg-temp/lib" />
+        <zip destfile="i2pupdate.zip" basedir="pkg-temp" />
+    </target>
+    <target name="prepupdate" depends="distclean, build">
         <delete dir="pkg-temp" />
         <copy file="build/i2p.jar" todir="pkg-temp/lib/" />
         <copy file="build/i2ptunnel.jar" todir="pkg-temp/lib/" />
@@ -286,7 +294,6 @@
         <mkdir dir="pkg-temp/eepsite" />
         <mkdir dir="pkg-temp/eepsite/webapps" />
         <mkdir dir="pkg-temp/eepsite/cgi-bin" />
-        <zip destfile="i2pupdate.zip" basedir="pkg-temp" />
     </target>
     <taskdef name="izpack" classpath="${basedir}/installer/lib/izpack/standalone-compiler.jar" classname="com.izforge.izpack.ant.IzPackTask" />
     <target name="installer" depends="preppkg">
