Whoops!  Forgot the new build file.  I broke cvs!
Monotone-Parent: cb087b7f85039128339ed5c273ef8509e714481b
Monotone-Revision: 602b2e9bfcf0168261b1b346a42044e5129aa70b

Monotone-Author: ragnarok
Monotone-Date: 2005-07-31T22:49:25
Monotone-Branch: i2p.i2p

--- a/apps/addressbook/build.xml
+++ b/apps/addressbook/build.xml
@@ -6,8 +6,7 @@
 	<property name="dist"  location="dist"/>
 	<property name="jar" value="addressbook.jar"/>
 	<property name="war" value="addressbook.war"/>
-	<property name="servlet" value="../jetty/jettylib/javax.servlet.jar"/>
-
+	
 	<target name="init">
 		<mkdir dir="${build}"/>
 		<mkdir dir="${dist}"/>
@@ -22,7 +21,12 @@
 
 	<target name="compile" depends="init">
 		<javac debug="true" deprecation="on" source="1.3" target="1.3" 
-                       srcdir="${src}" destdir="${build}" classpath="${servlet}"/>
+                       srcdir="${src}" destdir="${build}">
+            <classpath>
+                <pathelement location="../../core/java/build/i2p.jar" />
+                <pathelement location="../jetty/jettylib/javax.servlet.jar" />
+            </classpath>
+		</javac>
 	</target>
 
 	<target name="jar" depends="compile">
