Removing references to irc.duck.i2p, adding references to irc.arcturus.i2p, and replacing current ircProxy default destination string with "irc.postman.i2p,irc.arcturus.i2p"
Monotone-Parent: 9fc3fbceb4aeddbb5d4db6a2e3a0130ba137d107
Monotone-Revision: d1fb085e2927db6d7679acaca67cebd6ecf58b4b

Monotone-Author: smeghead
Monotone-Date: 2005-08-16T09:35:58
Monotone-Branch: i2p.i2p

--- a/installer/resources/i2ptunnel.config
+++ b/installer/resources/i2ptunnel.config
@@ -20,7 +20,7 @@ tunnel.1.type=client
 tunnel.1.sharedClient=true
 tunnel.1.interface=127.0.0.1
 tunnel.1.listenPort=6668
-tunnel.1.targetDestination=irc.duck.i2p,irc.baffled.i2p,irc.postman.i2p
+tunnel.1.targetDestination=irc.postman.i2p,irc.arcturus.i2p
 tunnel.1.i2cpHost=127.0.0.1
 tunnel.1.i2cpPort=7654
 tunnel.1.option.inbound.nickname=shared clients
