* 2005-08-21  0.6.0.3 released 2005-08-21  jrandom     * If we already have an established SSU session with the Charlie helping       test us, cancel the test with the status of "unknown".
Monotone-Parent: 27bc469ae4a09f33d56b816264b45c45feb03f6f
Monotone-Revision: 0e5e89a09824339db91dc0143917f635faad093f

Monotone-Author: jrandom
Monotone-Date: 2005-08-21T18:39:05
Monotone-Branch: i2p.i2p
Monotone-Tag: i2p_0_6_0_3

--- a/build.xml
+++ b/build.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project basedir="." default="all" name="i2p">
-    
+   
     <target name="all" >
         <echo message="Useful targets: " />
         <echo message="  dist:      distclean then package everything up (installer, clean tarball, update tarball)" />
@@ -28,6 +28,7 @@
         <ant dir="apps/routerconsole/java/" target="jar" />
         <ant dir="apps/addressbook/" target="war" />
         <ant dir="apps/susimail/" target="war" />
+        <ant dir="apps/syndie/java/" target="jar" /> <!-- not pushed in the update... yet -->
     </target>
     <target name="buildWEB">
         <ant dir="apps/jetty" target="fetchJettylib" />
@@ -58,6 +59,8 @@
         <copy file="installer/lib/jbigi/jbigi.jar" todir="build" />
         <copy file="apps/addressbook/dist/addressbook.war" todir="build/" />
         <copy file="apps/susimail/susimail.war" todir="build/" />
+        <copy file="apps/syndie/java/build/syndie.jar" todir="build/" />
+        <copy file="apps/syndie/syndie.war" todir="build/" />
     </target>
     <target name="javadoc">
         <mkdir dir="./build" />
