2005-08-23  jrandom     * Removed the concept of "no bandwidth limit" - if none is specified, its       16KBps in/out.     * Include ack packets in the per-peer cwin throttle (they were part of the       bandwidth limit though).     * Tweak the SSU cwin operation to get more accurrate estimates under       congestions.     * SSU improvements to resend more efficiently.     * Added a basic scheduler to eepget to fetch multiple files sequentially.
Monotone-Parent: 809e601847f434a70888930837cefe799c580ffb
Monotone-Revision: 4f3c1e090d07971409259b3c19792723bd09f03c

Monotone-Author: jrandom
Monotone-Date: 2005-08-23T21:25:49
Monotone-Branch: i2p.i2p

--- a/build.xml
+++ b/build.xml
@@ -59,6 +59,7 @@
         <copy file="installer/lib/jbigi/jbigi.jar" todir="build" />
         <copy file="apps/addressbook/dist/addressbook.war" todir="build/" />
         <copy file="apps/susimail/susimail.war" todir="build/" />
+        <copy file="apps/syndie/syndie.war" todir="build/" />
         <copy file="apps/syndie/java/build/syndie.jar" todir="build/" />
         <copy file="apps/syndie/syndie.war" todir="build/" />
     </target>
@@ -188,6 +189,7 @@
         <copy file="build/routerconsole.war" todir="pkg-temp/webapps/" />
         <copy file="build/addressbook.war" todir="pkg-temp/webapps/" />
         <copy file="build/susimail.war" todir="pkg-temp/webapps/" />
+        <copy file="build/syndie.war" todir="pkg-temp/webapps/" />
         <copy file="installer/resources/clients.config" todir="pkg-temp/" />
         <copy file="installer/resources/eepget" todir="pkg-temp/" />
         <copy file="installer/resources/i2prouter" todir="pkg-temp/" />
@@ -286,6 +288,7 @@
         <copy file="build/routerconsole.war" todir="pkg-temp/webapps/" />
         <copy file="build/addressbook.war" todir="pkg-temp/webapps/" />
         <copy file="build/susimail.war" todir="pkg-temp/webapps/" />
+        <copy file="build/syndie.war" todir="pkg-temp/webapps/" />
         <copy file="history.txt" todir="pkg-temp/" />
         <mkdir dir="pkg-temp/docs/" />
         <copy file="news.xml" todir="pkg-temp/docs/" />
