--- a/build.xml
+++ b/build.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="UTF-8"?>
+<?xml version="1.0" encoding="ISO-8859-1"?>
 <project basedir="." default="all" name="i2p">
    
     <target name="all" >
