--- a/installer/resources/i2ptunnel.config
+++ b/installer/resources/i2ptunnel.config
@@ -5,7 +5,7 @@ tunnel.0.type=httpclient
 tunnel.0.sharedClient=true
 tunnel.0.interface=127.0.0.1
 tunnel.0.listenPort=4444
-tunnel.0.proxyList=squid.i2p,www1.squid.i2p
+tunnel.0.proxyList=squid.i2p
 tunnel.0.i2cpHost=127.0.0.1
 tunnel.0.i2cpPort=7654
 tunnel.0.option.inbound.nickname=shared clients
@@ -20,7 +20,7 @@ tunnel.1.type=client
 tunnel.1.sharedClient=true
 tunnel.1.interface=127.0.0.1
 tunnel.1.listenPort=6668
-tunnel.1.targetDestination=irc.postman.i2p,irc.freshcoffee.i2p,irc.arcturus.i2p
+tunnel.1.targetDestination=irc.postman.i2p,irc.freshcoffee.i2p
 tunnel.1.i2cpHost=127.0.0.1
 tunnel.1.i2cpPort=7654
 tunnel.1.option.inbound.nickname=shared clients
