added rss2.0 support via rss.jsp rss.jsp can in turn receive all the filters that index.jsp can - e.g. ?blog=blah or ?selector=group://foo, and by default returns the latest 10 values (overridden with ?wanted=15).  If you want it to pull with a user's blog's preferences (filters, groups, etc), you can specify ?login=user&password=password
Monotone-Parent: 6e057f7f768cfa22365831e4692a668f1ac85f36
Monotone-Revision: f225d5735f0f9937a2d0f436548c13483447ce0d

Monotone-Author: jrandom
Monotone-Date: 2005-09-05T05:33:33
Monotone-Branch: i2p.i2p

--- a/apps/syndie/jsp/web.xml
+++ b/apps/syndie/jsp/web.xml
@@ -9,6 +9,11 @@
      <servlet-class>net.i2p.syndie.web.ArchiveServlet</servlet-class>
     </servlet>
      
+    <servlet>
+     <servlet-name>net.i2p.syndie.web.RSSServlet</servlet-name>
+     <servlet-class>net.i2p.syndie.web.RSSServlet</servlet-class>
+    </servlet>
+     
     <!-- precompiled servlets -->
     
     <servlet-mapping> 
@@ -18,6 +23,10 @@
     <servlet-mapping> 
       <servlet-name>net.i2p.syndie.web.ArchiveServlet</servlet-name>
       <url-pattern>/archive/*</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping> 
+      <servlet-name>net.i2p.syndie.web.RSSServlet</servlet-name>
+      <url-pattern>/rss.jsp</url-pattern>
     </servlet-mapping>
     
     <session-config>
